--- a/hw1/report.Rmd
+++ b/hw1/report.Rmd
@@ -191,6 +191,7 @@ PW_M <- result[[2]]
 #### График зависимости достигаемого уровня значимости критерия Фишера от значений параметров, усреднённого по большому количеству повторений эксперимента.
 
 ```{r stored, include=FALSE}
+# Посчитал заранее, чтобы без ожидания править и генерировать html отчет.
 load('PV_M.rda')
 load('PW_M.rda')
 ```
@@ -208,7 +209,7 @@ drawExp(PW_M, sigma2, p1, "Fisher Test power")
 #### Выводы.
 
 Видно, что критерий Фишера устойчив на двух отрезках параметра $p_{1}=p_{2}=p$.
-На первом отрезке $[0, ~0.3]$ преобладает доля элементов выборок из равномерного распределения. Хотя предположение о нормальности выборок нарушено, критерий на этом отрезке устойчив. Логично, ведь в этом случае в независимости от выбранного параметра sigma2, дисперсии двух выборок равны, т.к. они из одного и того же равномерного распределения.
-На втором отрезке $[~0.8, 1]$ преобладает доля элементов выборок из нормального распределения. На этом отрезке предположение о нормальности выборок выполнены с небольшим шумом, незначительные отклонения $\sigma_{2}$ от $1$ не дают значимых изменений $p-value$, что логично, т.к. он распределен равномерно на $[0,1]$ при справедливости нулевой гипотезы. А при большой разнице в дисперсиях шум не мешает уверенно отклонять нулевую гипотезу.
+На первом отрезке [0, ~0.3] преобладает доля элементов выборок из равномерного распределения. Хотя предположение о нормальности выборок нарушено, критерий на этом отрезке устойчив. Логично, ведь в этом случае в независимости от выбранного параметра sigma2, дисперсии двух выборок равны, т.к. они из одного и того же равномерного распределения.
+На втором отрезке [~0.8, 1] преобладает доля элементов выборок из нормального распределения. На этом отрезке предположение о нормальности выборок выполнены с небольшим шумом, незначительные отклонения $\sigma_{2}$ от $1$ не дают значимых изменений $p-value$, что логично, т.к. он распределен равномерно на $[0,1]$ при справедливости нулевой гипотезы. А при большой разнице в дисперсиях шум не мешает уверенно отклонять нулевую гипотезу.
 
-На отрезке $[~0.3, ~0.8]$ критерий неустойчив. В данном случае видно, что несоблюдение предположения о нормальности выборок мешает уверенно отклонять нулевую гипотезу при больших различиях в дисперсиях, что говорит о неустойчивости критерия. За исключением случая, когда обе выборки из одного и того же равномерного распределения.
+На отрезке [~0.3, ~0.8] критерий неустойчив. В данном случае видно, что несоблюдение предположения о нормальности выборок мешает уверенно отклонять нулевую гипотезу при больших различиях в дисперсиях, что говорит о неустойчивости критерия. За исключением случая, когда обе выборки из одного и того же равномерного распределения.
