--- a/hw2/report.Rmd
+++ b/hw2/report.Rmd
@@ -8,9 +8,12 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 Опрос US Bureau of Labor Statistics 2002 года содержит данные о годовом заработке 55729 участников; известны также их пол, возраст, уровень образования, тип работы.
+
+Уровни образования: (1 = "no high school", 2 = "some high school", 3 = "high school diploma", 4 = "some college", 5 = "bachelor's degree", 6 = "postgraduate degree")
+
 Задание: оценить влияние образования, пола и типа работы на годовой заработок.
 
-### Подготовка данных
+### 1. Подготовка данных
 ```{r eval=FALSE}
 library(gdata)
 data <- read.xls("./workers.xls", )
@@ -36,9 +39,9 @@ str(workers)
 replications(EARN ~ EDUC + SEX + JOB, workers)
 ```
 
-### Распределение годового дохода
-```{r}
+*Распределение годового дохода*
 
+```{r}
 hist(workers$EARN, nclass=1000)
 
 plot(density(workers$EARN))
@@ -47,10 +50,11 @@ lines(density(workers$EARN[workers$SEX == "male"]), col="blue")
 legend("topright", c("Total", "Female", "Male"), lty=c(1,1), col=c("black", "red", "blue"))
 ```
 
-**Из графика плотности годового дохода видно, что основная доля участников опроса находится до порога в 1e05.**
+**Из графика плотности годового дохода видно, что основная доля участников опроса находится до порога в 1e05. Кол-во участников, годовой доход которых выше порога - 2647. Их не будем учитывать в анализе. Итого в анализе участвует 53082 объекта. **
 
 Далее будем исследовать только основную часть участников.
 ```{r}
+target_samples = workers$EARN < 1e05
 data <- workers[workers$EARN < 1e05,]
 plot(density(data$EARN))
 lines(density(data$EARN[data$SEX == "female"]), col="red")
@@ -58,7 +62,7 @@ lines(density(data$EARN[data$SEX == "male"]), col="blue")
 legend("topright", c("Total", "Female", "Male"), lty=c(1,1), col=c("black", "red", "blue"))
 ```
 
-### Трёхфакторный дисперсионный анализ.
+### 2. Трёхфакторный дисперсионный анализ.
 **(дизайн 2х6х3)**
 
 ```{r fig.height=5, fig.width=10}
@@ -67,115 +71,133 @@ summary(a1)
 ```
 Тройное взаимодействие значимо, разделим выборку по признаку SEX.
 
-#### Анализ участников мужского пола.
+#### 2.1 Анализ участников мужского пола.
+
+```{r}
+maledata <- data[data$SEX == "male",]
+```
 
 ```{r fig.height=5, fig.width=10}
-maledata <- data[data$SEX == "male",]
-
 a1 <- aov(EARN ~ EDUC * JOB, data=maledata)
 summary(a1)
 
 par(mfrow=c(1,2))
 with(maledata, interaction.plot(JOB, EDUC, EARN, main = "Male"))
-with(maledata, interaction.plot(EDUC, JOB, EARN,main = "Male"))
+with(maledata, interaction.plot(EDUC, JOB, EARN, main = "Male"))
 ```
-Двойное взаимодействие значимо, разделим выборку по признаку JOB.
+Двойное взаимодействие образования(EDUC) и типа работы(JOB) значимо.
 
-#### Анализ типов работы участников мужского пола.
+(1 = "no high school", 2 = "some high school", 3 = "high school diploma", 4 = "some college", 5 = "bachelor's degree", 6 = "postgraduate degree")
 
-**Private-sector**
-```{r fig.height=5, fig.width=20, warning=F}
+**Сводка выводов из идущего далее анализа участников мужского пола**:
+
+График слева:
+
+* На уровне образования 1 и 3, наибольший доход в Goverment.
+    + 1 - 23473(20019, 26927)
+    + 3 - 34978(33824, 36132)
+* На уровне образования 2, доход схож для всех типов работ, основываясь на результатх TukeyHSD.(см. далее)
+* На уровнях образования 5 и 6, доход в private-sector > government > self-employed (p-value по нисходящему критерию Джонкхие близки к нулю.)
+
+
+График справа:
+
+* С ростом уровня образования растет годовой доход участника опроса, вне зависимости от типа работы. Гипотеза проверена с помощью критерия Джонкхие, p-value близки к нулю.
+* Для типа работы private-sector, наименее значимая разница в размере дохода между уровнями образования 2-1 (3263(1252,  5275), p-value - 5.53e-05), все остальные пары уровней образования значимо различны (> 5529, p-value - 0)
+* Для типа работы goverment, незначимая разница между 2-1 (1841(-6772, 10455), p-value - 0.99), все остальные пары уровней образования значимо различны.
+* Для типа работы self-employed, незначимая разница между 2-1 (3959(-4379, 12298), p-value - 0.75) и 4-3 (2711(-402,  5825), p-value - 0.13), все остальные пары уровней образования значимо различны.
+
+
+Разделим выборку по признаку JOB.
+
+#### 2.1.1 Анализ каждого типа работы.
+
+Анализируем годовой доход в зависимости от образования, для кажого типа работы.
+
+```{r}
 prmaledata <- maledata[maledata$JOB == "private-sector",]
+gvmaledata <- maledata[maledata$JOB == "government",]
+semaledata <- maledata[maledata$JOB == "self-employed",]
+```
+
+*Вывод*:
+
+* С ростом уровня образования растет годовой доход участника, вне зависимости от типа работы. Гипотеза проверена с помощью критерия Джонкхие, p-value близки к нулю. 
+
+```{r eval=F}
+# **Private-sector**
 boxplot(EARN ~ EDUC, data=prmaledata)
 jonckheere.test(prmaledata$EARN, as.numeric(prmaledata$EDUC), alternative = "increasing")
-```
-Уровень годового дохада растет в зависимости от образования.
 
-**Government**
-```{r fig.height=5, fig.width=20, warning=F}
-gvmaledata <- maledata[maledata$JOB == "government",]
+# **Government**
 boxplot(EARN ~ EDUC, data=gvmaledata)
 jonckheere.test(gvmaledata$EARN, as.numeric(gvmaledata$EDUC), alternative = "increasing")
-```
 
-**self-employed**
-```{r fig.height=5, fig.width=20, warning=F}
-semaledata <- maledata[maledata$JOB == "self-employed",]
+# **self-employed**
 boxplot(EARN ~ EDUC, data=semaledata)
 jonckheere.test(semaledata$EARN, as.numeric(semaledata$EDUC), alternative = "increasing")
 ```
-Сравним годовой доход 
-```{r fig.height=5, fig.width=20, warning=F}
-a1 <- aov(EARN ~ EDUC, data=semaledata)
-LSD2 <- LSD.test(a1, "EDUC", p.adj="bonferroni",console=TRUE)
-TukeyHSD(a1, "EDUC", p.adj="bonferroni")
+
+*Для каждого типа работ, сравним попарно годовые доходы для всех уровней образования.*
+
+```{r eval=F}
+TukeyHSD(aov(EARN ~ EDUC, data=prmaledata), "EDUC", p.adj="holm")
+TukeyHSD(aov(EARN ~ EDUC, data=gvmaledata), "EDUC", p.adj="holm")
+TukeyHSD(aov(EARN ~ EDUC, data=semaledata), "EDUC", p.adj="holm")
 ```
-Вывод: В отличие от остальных типов работ, в self-employed участники мужского пола с образованием "no high school" и "some high school", "high school diploma" и "some college" имеют схожий уровень годового дохода.
 
-#### Анализ образования участников мужского пола.
+*Выводы*(на основе TukeyHSD с множественной поправкой holm):
 
-**1 no high school**
-```{r fig.height=5, fig.width=20}
+* В Private-sector. Наименее значимая разница оказалась между 2-1 (3263(1252,  5275), p-value - 5.53e-05), все остальные пары уровней образования значимо различны (> 5529, p-value - 0)
+* В Goverment. Незначимая разница между 2-1 (1841(-6772, 10455), p-value - 0.99), все остальные пары уровней образования значимо различны.
+* В self-employed Незначимая разница между 2-1 (3959(-4379, 12298), p-value - 0.75) и 4-3 (2711(-402,  5825), p-value - 0.13), все остальные пары уровней образования значимо различны.
+
+
+*Средний доход на каждом уровне образования, для каждого типа работы.*
+
+```{r}
+LSD.test(aov(EARN ~ EDUC, data=prmaledata), "EDUC", p.adj="holm")$means
+LSD.test(aov(EARN ~ EDUC, data=gvmaledata), "EDUC", p.adj="holm")$means
+LSD.test(aov(EARN ~ EDUC, data=semaledata), "EDUC", p.adj="holm")$means
+```
+
+#### 2.1.2 Анализ каждого уровня образования.
+
+```{r}
 edu1maledata <- maledata[maledata$EDUC == "1",]
-boxplot(EARN ~ JOB, data=edu1maledata)
-a1 <- aov(EARN ~ JOB, data=edu1maledata)
-TukeyHSD(a1, "JOB", p.adj="bonferroni")
-model.tables(a1, "means")$tables$JOB
-```
-
-**2 some high school**
-```{r fig.height=5, fig.width=20}
 edu2maledata <- maledata[maledata$EDUC == "2",]
-boxplot(EARN ~ JOB, data=edu2maledata)
-a1 <- aov(EARN ~ JOB, data=edu2maledata)
-TukeyHSD(a1, "JOB", p.adj="bonferroni")
-model.tables(a1, "means")$tables$JOB
-```
-
-**3 high school diploma**
-```{r fig.height=5, fig.width=20}
 edu3maledata <- maledata[maledata$EDUC == "3",]
-boxplot(EARN ~ JOB, data=edu3maledata)
-a1 <- aov(EARN ~ JOB, data=edu3maledata)
-TukeyHSD(a1, "JOB", p.adj="bonferroni")
-model.tables(a1, "means")$tables$JOB
-```
-
-**4 some college**
-```{r fig.height=5, fig.width=20}
 edu4maledata <- maledata[maledata$EDUC == "4",]
-boxplot(EARN ~ JOB, data=edu4maledata)
-a1 <- aov(EARN ~ JOB, data=edu4maledata)
-TukeyHSD(a1, "JOB", p.adj="bonferroni")
-model.tables(a1, "means")$tables$JOB
-```
-
-**5 bachelor's degree**
-```{r fig.height=5, fig.width=20}
 edu5maledata <- maledata[maledata$EDUC == "5",]
-boxplot(EARN ~ JOB, data=edu5maledata)
-a1 <- aov(EARN ~ JOB, data=edu5maledata)
-TukeyHSD(a1, "JOB", p.adj="bonferroni")
-model.tables(a1, "means")$tables$JOB
-```
-
-**postgraduate degree**
-```{r fig.height=5, fig.width=20}
 edu6maledata <- maledata[maledata$EDUC == "6",]
-boxplot(EARN ~ JOB, data=edu6maledata)
-a1 <- aov(EARN ~ JOB, data=edu6maledata)
-TukeyHSD(a1, "JOB", p.adj="bonferroni")
-model.tables(a1, "means")$tables$JOB
 ```
 
-* В группах "no high school" "some high school" отклонение дохода находится в интервале -1000, 1000. Годовой уровень - 23к.
-* В группе "high school diploma" доход у "government"(35к) в среднем выше на 2500.
-* В группе "some college" доход во всех категориях образования разный. Самый низкий у self-employed(35к) самый высокий у government(40к).
-* В группе "bachelor's degree" самый высокий доход в private-sector(48к) самый низкий у self-employed(42к)
-* В группе "postgraduate degree" самый высокий доход их всех групп. private-sector(55к)     government(53к)  self-employed(50к)
+* Для уровней образования 1, 3, наибольший доход в Goverment.
+    + 1 - 23473(20019, 26927)
+    + 3 - 34978(33824, 36132)
+
+```{r}
+TukeyHSD(aov(EARN ~ JOB, data=edu1maledata), "JOB", p.adj="holm")$JOB
+TukeyHSD(aov(EARN ~ JOB, data=edu3maledata), "JOB", p.adj="holm")$JOB
+```
+
+* На уровне образования 2, доход во всех типах работ схож.
+
+```{r}
+TukeyHSD(aov(EARN ~ JOB, data=edu2maledata), "JOB", p.adj="holm")$JOB
+```
+
+* На уровне образования 5, 6, доход в private-sector > government > self-employed
+
+```{r warning=F}
+LSD.test(aov(EARN ~ JOB, data=edu5maledata), "JOB", p.adj="holm")$means
+jonckheere.test(edu5maledata$EARN, as.numeric(edu5maledata$JOB), alternative = "decreasing")
+LSD.test(aov(EARN ~ JOB, data=edu6maledata), "JOB", p.adj="holm")$means
+jonckheere.test(edu6maledata$EARN, as.numeric(edu6maledata$JOB), alternative = "decreasing")
+```
 
 
-#### Анализ участников женского пола.
+#### 2.2 Анализ участников женского пола.
 
 ```{r fig.height=5, fig.width=10}
 femaledata <- data[data$SEX == "female",]
@@ -189,7 +211,7 @@ with(femaledata, interaction.plot(EDUC, JOB, EARN,main = "Female"))
 ```
 Двойное взаимодействие значимо, разделим выборку по признаку JOB.
 
-#### Анализ типов работы участников мужского пола.
+#### 2.2.1 Анализ типов работы участников женского пола.
 
 **Private-sector**
 ```{r fig.height=5, fig.width=20, warning=F}
@@ -225,7 +247,7 @@ model.tables(a1, "means")$tables$EDUC
 * "high school diploma", "some college" - 19-22к
 * "bachelor's degree", "postgraduate degree" - 28-31к
 
-#### Анализ образования участников мужского пола.
+#### 2.2.2 Анализ образования участников женского пола.
 
 **1 no high school**
 ```{r fig.height=5, fig.width=20}
@@ -298,7 +320,7 @@ model.tables(a1, "means")$tables$JOB
 * В группе "bachelor's degree" самый высокий доход в private-sector(48к) самый низкий у self-employed(42к)
 * В группе "postgraduate degree" самый высокий доход их всех групп. private-sector(55к)     government(53к)  self-employed(50к)
 
-# Выводы
+#### 3 Выводы
 
 SEX:
 
